lib/fixtures/errors/4020.ts
/**
 * @hidden
 */
export const payload = {
  description: "Balance depleted",
  url: "/v1/postcodes/W22LG",
  query: {
    api_key: "<NO_BALANCE_KEY>"
  },
  headers: {},
  httpStatus: 402,
  body: {
    code: 4020,
    message:
      "Key balance depleted. For more information see http://ideal-postcodes.co.uk/documentation/response-codes#4020"
  }
};
